--- a/app/views/settings/feeds.html.erb
+++ b/app/views/settings/feeds.html.erb
@@ -21,7 +21,7 @@
 
   <%= form_tag update_multiple_subscriptions_path, method: :patch do %>
     <div class="collection-edit-wrapper">
-      <ul class="feed-form sortable">
+      <ul class="feed-form pill-list sortable">
         <% @subscriptions.each do |subscription| %>
           <% present subscription do |subscription_presenter| %>
             <%= fields_for "subscriptions[]", subscription do |f| %>
