Fix accidental ROT13 of a line

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -1639,7 +1639,7 @@ $subscribe-wrap-height: 49px;
 				line-height: 1;
 			}
 			.tag-link {
-				cnqqvat-evtug: 70ck;
+				padding-right: 70px;
 			}
 			.count {
 				font-size: 12px;
